# uor-compress

./: Cargo.toml
src/: error.rs  lib.rs  main.rs
src/algebra/: address.rs  correlation.rs  mod.rs  ring.rs  triad.rs
src/analysis/: classifier.rs  delta.rs  mod.rs  stratum_profile.rs
src/archive/: format.rs  manifest.rs  mod.rs  reader.rs  writer.rs
src/backend/: delta_backend.rs  identity.rs  lz4_backend.rs  mod.rs  quantize.rs  traits.rs  zstd_backend.rs
src/chunk/: cdc.rs  chunk_store.rs  mod.rs
src/cli/: mod.rs
src/pipeline/: compress.rs  config.rs  decompress.rs  mod.rs
src/verify/: certificate.rs  integrity.rs  mod.rs
