[package]
name = "uor-compress"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "UOR/PRISM-based file compression with content-addressed deduplication and stratum-adaptive routing"

[dependencies]
zstd = "0.13"
lz4_flex = "0.11"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
rayon = "1"
byteorder = "1"
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"

tempfile = "3"

[dev-dependencies]
rand = "0.8"
